[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "so_survey"
version = "0.1.0"
description = "Stack Overflow survey data analysis toolkit"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Anuj Patel", email = "anujpatel360@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "click>=7.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[project.scripts]
so_survey = "so_survey.cli:cli"
so_survey_repl = "so_survey.repl:start_repl"

[tool.setuptools]
packages = ["so_survey"]